# Raytracing

./: .gitignore  CMakeLists.txt  img.ppm  img.ppn
inc/: actor.h  actor_list.h  camera.h  color.h  interval.h  material.h  ray.h  rt_utility.h  sphere.h  vec3.h
src/: actor.cpp  actor_list.cpp  camera.cpp  color.cpp  interval.cpp  main.cpp  material.cpp  ray.cpp  sphere.cpp  vec3.cpp
